force-app/main/default/objects/DevCore__Bisnode_Exception__c/DevCore__Bisnode_Exception__c.object-meta.xml
<CustomObject>
    <label>Bisnode Error</label>
    <nameField>
        <displayFormat>BISNODE-ERROR-{0000000000}</displayFormat>
        <label>Bisnode Exception ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bisnode Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>