force-app/main/default/objects/DevCore__Bisnode_Exception__c/fields/DevCore__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>