force-app/main/default/objects/DevCore__Bisnode_Exception__c/fields/DevCore__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Error_Message__c</fullName>
    <label>Error Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>