force-app/main/default/objects/DevCore__Bisnode_Exception__c/fields/DevCore__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>