force-app/main/default/objects/DevCore__Bisnode_Exception__c/listViews/DevCore__All.listView-meta.xml
<ListView>
    <fullName>DevCore__All</fullName>
    <columns>NAME</columns>
    <columns>DevCore__Error_Message__c</columns>
    <columns>DevCore__Error_Code__c</columns>
    <columns>DevCore__Stack_Trace__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>